--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,14 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.6</version>
       <scope>test</scope>
-    </dependency>          </dependencies>
+    </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.2</version>
+          <scope>test</scope>
+      </dependency>
+  </dependencies>
   <build>
         <plugins>
                   <plugin>
